# NtQueryDirectoryFile-Test

./: README.md
results/: result_vista.txt  result_win10.txt  result_win11_compatibility_win7.txt  result_win7.txt  result_win8.txt  result_win81.txt  result_xp.txt
source/: CMakeLists.txt  ntquerydirectoryfile-test.cpp
